fixed some syntax issues, see https://github.com/spechub/Hets/issues/1366

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3338,10 +3338,11 @@ CircVars  = 'vars' ,  ( Symbol , { Symbol } ) ;
 GroupOMS            = '{' , OMS , '}'
                      | OMSRef ;
 
-Translation          = 'with' , { LogicTranslation } , [ SymbolMapItems ] ;
+Translation          = 'with' , { LogicTranslation } , SymbolMapItems
+                     | 'with' , LogicTranslation , { LogicTranslation }
 LogicTranslation     = 'translation' , OMSLangTrans ;
                       
-Reduction            = 'hide' , { LogicReduction } , [ SymbolItems ]
+Reduction            = 'hide' , { LogicReduction } , SymbolItems 
                      | 'hide' , LogicReduction , { LogicReduction } 
                      | 'reveal' ,  SymbolMapItems ;
 LogicReduction       = 'along' , OMSLangTrans ;
