improved constructor names in syntax of entailments

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3003,10 +3003,10 @@ InterfaceSignature   = SymbolItems ;
 ImportName           = IRI ;
 ExtensionName        = IRI ;
 \end{lstlisting}
-\ednote{Alternatively, we could use one type of \syntax{InterfaceSignature}
-only, and instead use different constructors for \syntax{Extraction}
-and \syntax{Approximation}. This would be a bit more verbose, but a bit
-more coherent with position of non-terminals in the concrete syntax.}
+%% \ednote{Alternatively, we could use one type of \syntax{InterfaceSignature}
+%% only, and instead use different constructors for \syntax{Extraction}
+%% and \syntax{Approximation}. This would be a bit more verbose, but a bit
+%% more coherent with position of non-terminals in the concrete syntax.}
 
 An OMS definition \syntax{OMSDefn} names a focused OMS.  
 
@@ -3118,9 +3118,9 @@ NodeMap              = 'node-map', OMSName , OMSName , { LogicTranslation } , [ 
 
 
 Entailment           = 'entailment' , EntailmentName , EntailmentType ;
-EntailmentType       = 'focused-focused-entailment', OMS , OMS 
-                     | 'dist-focused-entailment', Network , OMS 
-                     | 'dist-dist-entailment', Network, Network ;
+EntailmentType       = 'oms-oms-entailment', OMS , OMS 
+                     | 'network-oms-entailment', Network , OMS 
+                     | 'network-network-entailment', Network, Network ;
 EntailmentName       = IRI ;
 
 EquivDefn            = 'equiv-defn' , EquivName , EquivType , OMS ;
