further edits to chapter 0

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -729,20 +729,24 @@ Fraunhofer FOKUS, MITRE, and Thematix Partners LLC are pleased  to submit this j
 
 Clause 0 of this document contains information specific to the OMG submission process and is not part of the proposed specification. The proposed specification starts with Clause 1 “Scope”.
 
-\section{RFP Requirements}
+
+
+
+
+\section{Mandatory Requirements}
 
 
 \begin{center}
-\begin{longtable}{|l|p{0.4\textwidth}|p{0.4\textwidth}|}
-\caption{Mandatory Requirements}\\
+\begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
+%\caption{Mandatory Requirements}\\
 \hline
-\textbf{Number} & \textbf{RFP requirement} & \textbf{How this proposal  addresses requirement}\\
+\textbf{ID} & \textbf{RFP requirement} & \textbf{How this proposal  addresses requirement}\\
 \hline
 \endfirsthead
 \multicolumn{3}{l}%
 {\tablename\ \thetable\ -- \textit{Continued from previous page}} \\
 \hline
-\textbf{Number} & \textbf{RFP requirement} & \textbf{How this proposal addresses requirement}\\
+\textbf{ID} & \textbf{RFP requirement} & \textbf{How this proposal addresses requirement}\\
 \hline
 \endhead
 \hline \multicolumn{3}{l}{\textit{Continued on next page}} \\
@@ -869,21 +873,21 @@ of the same content to one unique identifier.	&
 
 
 \end{longtable}
+\end{center}
 
+\section{Optional Requirements}
 
-
-
-
-\begin{longtable}{|l|p{0.4\textwidth}|p{0.4\textwidth}|}
-\caption{Optional Requirements}\\
+\begin{center}
+\begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
+%\caption{Optional Requirements}\\
 \hline
-\textbf{Number} & \textbf{RFP requirement} & \textbf{How this proposal  addresses requirement}\\
+\textbf{ID} & \textbf{RFP requirement} & \textbf{How this proposal  addresses requirement}\\
 \hline
 \endfirsthead
 \multicolumn{3}{l}%
 {\tablename\ \thetable\ -- \textit{Continued from previous page}} \\
 \hline
-\textbf{Number} & \textbf{RFP requirement} & \textbf{How this proposal addresses requirement}\\
+\textbf{ID} & \textbf{RFP requirement} & \textbf{How this proposal addresses requirement}\\
 \hline
 \endhead
 \hline \multicolumn{3}{l}{\textit{Continued on next page}} \\
@@ -903,14 +907,111 @@ Proposals may provide constructs for non-monotonic logics. 	&
 A characterization of the trade-offs among different translations. 	&
    \\ \hline
 %
-
 \end{longtable}
-
-
 \end{center}
 
+\section{Issues to be discussed}
 
+\begin{center}
+\begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
+%\caption{Optional Requirements}\\
+\hline
+\textbf{ID} & \textbf{Discussion item} & \textbf{Resolution}\\
+\hline
+\endfirsthead
+\multicolumn{3}{l}%
+{\tablename\ \thetable\ -- \textit{Continued from previous page}} \\
+\hline
+\textbf{ID} & \textbf{Discussion item} & \textbf{Resolution}\\
+\hline
+\endhead
+\hline \multicolumn{3}{l}{\textit{Continued on next page}} \\
+\endfoot
+\hline
+\endlastfoot
+%
+6.7.(a)	& 
+Do existing language standards need to be extended or adapted in order to make them OntoIOp conformant.	&
+   \\ \hline
+%
+6.7.(b)	& 
+Proposals should discuss whether the semantics of the metalanguage shall be included into the standard.	&
+   \\ \hline
+%	
+6.7.(c)	& 
+Proposals should discuss the chosen list of logics and translations.	&
+   \\ \hline
+%	
+6.7.(d)	& 
+Proposals should discuss a meta-ontology of logical languages and theories.	&
+   \\ \hline
+%	
+6.7.(e)	& 
+Proposals should discuss the use of QVT for expressing logic translations.	&
+   \\ \hline
+%	
+6.7.(f)	& 
+Proposals should discuss a meta-ontology of logical languages and theories.	&
+   \\ \hline
+%	
+6.7.(g)	& 
 
+Proposals should discuss the use of QVT for expressing logic translations.	&
+   \\ \hline
+%	
+6.7.(h)	& 
+Proposals should discuss the role of APIs.	&
+   \\ \hline
+%	
+6.7.(i)	& 
+Proposals should discuss availability and use of tools.	&
+   \\ \hline
+%	
+6.7.(j)	& 
+Proposals should discuss a registry of logical languages.	&
+   \\ \hline
+%	
+\end{longtable}
+\end{center}
+
+\section{Evaluation Criteria}
+
+\begin{center}
+\begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
+%\caption{Optional Requirements}\\
+\hline
+\textbf{ID} & \textbf{Criterion} & \textbf{Comment}\\
+\hline
+\endfirsthead
+\multicolumn{3}{l}%
+{\tablename\ \thetable\ -- \textit{Continued from previous page}} \\
+\hline
+\textbf{ID} & \textbf{Criterion} & \textbf{Comment}\\
+\hline
+\endhead
+\hline \multicolumn{3}{l}{\textit{Continued on next page}} \\
+\endfoot
+\hline
+\endlastfoot
+%
+6.8(a)	& 
+Proposals covering a broader range of features and of use cases will be favored. As a minimum, proposals shall define conformance criteria for logical languages and translations, and their proposed metalanguage shall cover some metalogical relationships and shall be applicable to multiple logics.	&
+   \\ \hline
+%
+6.8(b)		&
+Proposals covering existing language standards without (or with fewer) modifications will be favored.	&
+	\\ \hline
+%
+6.8(c)		&
+Proposals establishing actually (or making this at least possible in theory) OntoIOp conformance of more logical languages and translations will be favored. 	&
+	\\ \hline
+
+\end{longtable}
+\end{center}
+\section{Proof of Concept}
+
+\section{Changes to Adopted OMG Specifications}
+This specification proposes no changes to adopted OMG specifications.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
