first answers to evaluation criteria

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -855,7 +855,7 @@ initial set of language translations may be part of an informative annex.	&
 %
 6.5.5(b)& 
 Conformance of the following subset of logical languages  shall be established: OWL2 (with profiles
-EL, RL, QL, CLIF, RDF, UML class diagrams).
+EL, RL, QL), CLIF, RDF, UML class diagrams.
 	&
    \\ \hline
 %
@@ -1000,14 +1000,20 @@ Proposals covering a broader range of features and of use cases will be favored.
 %
 6.8(b)		&
 Proposals covering existing language standards without (or with fewer) modifications will be favored.	&
+Any document providing an OMS in a serialization of a DOL conformant
+language can be used as-is in DOL, by reference to its IRI. See \ref{sec:existing-serialization}.
 	\\ \hline
 %
 6.8(c)		&
 Proposals establishing actually (or making this at least possible in theory) OntoIOp conformance of more logical languages and translations will be favored. 	&
+We establish conformance of OWL 2 (annex \ref{a:owl}), Common Logic (annex \ref{a:cl}), RDF and RDFS (annex \ref{a:rdfs})
+with DOL.
 	\\ \hline
 
 \end{longtable}
 \end{center}
+\ednote{in 6.8(c), also mention at least UML class diagrams}
+
 \section{Proof of Concept}
 
 \section{Changes to Adopted OMG Specifications}
@@ -3852,7 +3858,8 @@ Table~\ref{tab:key-signs} following key signs are reserved, and are not availabl
 }
 
 \sclause{Integration of Serializations of Conforming Languages}
-Any document providing an OMS in a serializations of a DOL conformant
+\label{sec:existing-serialization}
+Any document providing an OMS in a serialization of a DOL conformant
 language can be used as-is in DOL, by reference to its IRI.
 
 
