--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3010,7 +3010,6 @@ OMS network consisting of focused OMS and OMS mappings. OMS networks may build o
 OMS networks, and they can be used in \syntax{combination}s.  
 }
 \begin{lstlisting}[language=ebnf,escapeinside={()}]  % abstract syntax
-
 NetworkDefn            = 'network-defn', NetworkName , [ ConsStrength ] , Network ;
 NetworkName            = IRI ;
 Network                = 'network', NetworkElements , ExcludeExtensions ;
@@ -3455,7 +3454,7 @@ PrefixBinding    = 'prefix-binding' , BoundPrefix , IRIBoundToPrefix ,
 BoundPrefix      = 'bound-prefix' , [ Prefix ] ;
 IRIBoundToPrefix = 'full-iri' , FullIRI ;
 Separators       = 'separators' , String , String ;
-String           = ($<$ \rm any list of unicode characters $>$)
+String           = ($<$ \rm any list of unicode characters $>$) ;
 \end{lstlisting}
 
 Bindings in a prefix map are evaluated from left to right.  Authors \shouldnot bind the same prefix twice, but if they do, the later binding wins.
@@ -3593,7 +3592,7 @@ NetworkElements        = NetworkElement , { ',' , NetworkElement } ;
 NetworkElement         = [ Id , ':' ] , OMSOrMappingorNetworkRef ;
 ExcludeExtensions      = 'excluding' , ExtensionRef , { ',' , ExtensionRef } ;
 OMSOrMappingorNetworkRef        = IRI ;
-Id                     = Letter , { LetterOrDigit }
+Id                     = Letter , { LetterOrDigit } ;
 \end{lstlisting}
 
 Note that we denote the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core-20120607, Section 6}) by a colon inside the prefix map, but completely omit it in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
@@ -3632,7 +3631,7 @@ GroupOMS            = '{' , OMS , '}'
                      | OMSRef ;
 
 Translation          = 'with' , { LogicTranslation } , SymbolMapItems
-                     | 'with' , LogicTranslation , { LogicTranslation }
+                     | 'with' , LogicTranslation , { LogicTranslation } ;
 LogicTranslation     = 'translation' , OMSLangTrans ;
                       
 Reduction            = 'hide' , { LogicReduction } , SymbolItems 
